<resources>
    <string name="app_name">RunBit</string>
    <string name="google_maps_key"  templateMergeStrategy="preserve" translatable="false">AIzaSyDn2QSUDV5CChJHfUryKc2B4QYQNxYBedg</string>
    <string name="add_profile_image">App Profile Image</string>
    <string name="full_name">Full Name</string>
    <string name="share">Share</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="profile">Profile</string>
    <string name="analytics">Analytics</string>
    <string name="your_runs">Your Runs</string>
    <string name="filter_by">Filter By:</string>
    <string name="open">Open</string>
    <string name="close">Clode</string>
    <string name="policies">Policies</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>